force-app/main/default/objects/Pull_Request__c/Pull_Request__c.object-meta.xml
<CustomObject>
    <label>Peer Review</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Peer Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>