force-app/main/default/objects/Pull_Request__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Peer Reviews</relationshipLabel>
    <relationshipName>Pull_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>